--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -26,7 +26,7 @@
           </li>
           <li>
             <a routerLink="/cart-page">
-              Cart <span>3</span>
+              Cart <span >{{cartQuantity}}</span>
             </a>
           </li>
         </ul>
