--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
+
   <app-title title="Carrinho" margin="1.5rem 0 0 2.5rem"></app-title>
-  <div class="container">
+  <app-not-found
+  [visible]="!cart || !cart.items.length"
+  notFoundMessage="Seu carrinho está vazio"
+  resetLinkText="Voltar para a Home"></app-not-found>
+  <div *ngIf="cart && cart.items.length" class="container">
     <ul>
       <li *ngFor="let cartItem of cart.items">
         <div>
