--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -14,7 +14,7 @@
         <ul>
           <app-search class="search"></app-search>
           <li>
-            <a routerLink="/login">Login</a>
+            <a routerLink="/login-page">Login</a>
           </li>
           <li class="menu-container">
             <a routerLink="/dashboard">Lorenzo</a>
