--- a/frontend/src/app/components/pages/food-page/food-page.component.html
+++ b/frontend/src/app/components/pages/food-page/food-page.component.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <app-not-found [visible]="!food.id"
+  <app-not-found [visible]="!food"
   notFoundMessage="Este Item não existe"
   resetLinkText="Voltar para a Home"></app-not-found>
-  <div *ngIf="food.id" class="container">
+  <div *ngIf="food" class="container">
     <img [src]="food.image" [alt]="food.name" />
     <div class="details">
       <div class="header">
