--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <div class="container">
     <div class="details">
       <app-title title="Login"></app-title>
 
       <form [formGroup]="LoginSession" (ngSubmit)="login()">
-        <div class="form-group">
-          <label>Email</label>
-          <div>
-            <input type="email"  placeholder="Email" formControlName="email">
-          </div>
-          <div class="erro-list" *ngIf="formControls.email.errors && isSubmitted">
-            <div *ngIf="formControls.email.errors.required">Email não pode estar em branco</div>
-            <div *ngIf="formControls.email.errors.email">Email invalido</div>
-          </div>
-        </div>
+        <text-input
+        [control]="formControl.email"
+        [showErrorsWhen]="isSubmitted"
+        type="email"
+        label="Email"></text-input>
+
         <div class="form-group">
           <label>Password</label>
           <div>
-          <input type="password" placeholder="password" formControlName="password">
+            <input type="password" placeholder="password" formControlName="password">
           </div>
         </div>
         <div class="erro-list" *ngIf="formControls.password.errors && isSubmitted">
@@ -39,4 +37,5 @@
   </div>
 
 </body>
+
 </html>
