--- a/frontend/src/app/components/partials/input-validation/input-validation.component.html
+++ b/frontend/src/app/components/partials/input-validation/input-validation.component.html
@@ -1,5 +1,5 @@
 <div class="erro-list" *ngIf="errorMessages && showErrors">
-  <div  *ngFor="let error of errorMessages">
-    {{error}}
+  <div *ngFor="let errorMessages of errorMessages">
+    {{errorMessages}}
   </div>
 </div>
