--- a/frontend/src/app/components/partials/text-input/text-input.component.html
+++ b/frontend/src/app/components/partials/text-input/text-input.component.html
@@ -1,7 +1,7 @@
-<input-container [lable]="label">
+<input-container [label]="label">
   <input [type]="type" [placeholder]="label"
-  [formControl]="formControl">
+  [formControl]="fromControl">
   <input-validation [control]="control"
-  [showErrorsWhen]="showErrorsWhen">
+  [showErrors]="showErrorsWhen">
   </input-validation>
 </input-container>
