--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -14,21 +14,14 @@
       <app-title title="Login"></app-title>
 
       <form [formGroup]="LoginSession" (ngSubmit)="login()">
-        <text-input
-        [control]="formControls.email"
-        [showErrorsWhen]="isSubmitted"
-        type="email"
-        label="Email"></text-input>
+        <text-input [control]="formControls.email" [showErrorsWhen]="isSubmitted" type="email" label="Email">
+        </text-input>
 
-        <text-input
-        [control]="formControls.password"
-        [showErrorsWhen]="isSubmitted"
-        type="password"
-        label="Password"></text-input>
-        <div class="button">
+        <text-input [control]="formControls.password" [showErrorsWhen]="isSubmitted" type="password" label="Password">
+        </text-input>
 
-        <button type="submit">Login</button>
-        </div>
+        <default-button text="Login">
+        </default-button>
       </form>
     </div>
   </div>
