--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -24,6 +24,11 @@
 
         <default-button text="Login">
         </default-button>
+
+        <div class="register">
+          New User? &nbsp;
+          <a routerLink="/register" [queryParams]="{returnUrl: returnUrl}">Register here</a>
+        </div>
       </form>
     </div>
   </div>
