--- a/frontend/src/app/components/pages/register-page/register-page.component.css
+++ b/frontend/src/app/components/pages/register-page/register-page.component.css
@@ -1,21 +1,16 @@
-.container {
+.container{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
     margin-top: 3rem;
 }
+
 .details{
-    width: 28rem;
+    width: 25rem;
 }
 
-form{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.register{
+.login{
     display: flex;
     justify-content: center;
     align-items: center;
