--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel=”stylesheet”>
 </head>
 <body>
 
@@ -25,8 +26,8 @@
             </div>
           </li>
           <li>
-            <a routerLink="/cart-page">
-              Cart <span >{{cartQuantity}}</span>
+            <a routerLink="/cart-page" class="fa-solid fa-cart-shopping">
+              Carrinho <span >{{cartQuantity}}</span>
             </a>
           </li>
         </ul>
